11526
That's quite interesting because bar(null) should NEVER call the Blub-defined method. And indeed if that's the only bar in existence, it doesn't compile at all.
{code}
a.scala:10: error: too many arguments for method bar: ()(implicit foo: Foo)Int
    println(bar(null))
               ^
one error found
{code}
This is what happens when there is no distinction maintained between the code that you actually wrote vs. the end result of the many meaningless-to-the-programmer transformations which take place on the way to the bytecode.
